Project1A-DevOpsCloudEngineer-Alok-Singh/novapay-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: novapay-ingress

  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  tls:
  - hosts:
    - www.devops-skill.xyz
    secretName: novapay-tls

  rules:
  - host: www.devops-skill.xyz

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: novapay-novapay-chart
            port:
              number: 80
